--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "mocha --timeout 10000 --exit --recursive",
+    "debug": "mocha debug --timeout 10000 --exit --recursive",
     "compile": "truffle compile",
     "lint": "solhint 'contracts/*.sol'",
     "pretty": "npx prettier --write 'contracts/*.sol'"
