Cleanup using openzeppelin test helpers

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/pawurb/SmartHold-contracts#readme",
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.11",
     "ganache-time-traveler": "^1.0.15",
     "truffle": "^5.3.9"
   }
