--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "truffle test"
+    "test": "mocha --timeout 10000 --exit --recursive"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/pawurb/SmartHold-contracts#readme",
   "devDependencies": {
+    "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.11",
-    "ganache-time-traveler": "^1.0.15",
-    "truffle": "^5.3.9"
+    "chai": "^4.3.4",
+    "hardhat": "^2.2.1",
+    "mocha": "^8.3.2"
   }
 }
