--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --timeout 10000 --exit --recursive"
+    "test": "mocha --timeout 10000 --exit --recursive",
+    "compile": "truffle compile"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,7 @@
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.11",
     "chai": "^4.3.4",
-    "hardhat": "^2.2.1",
-    "mocha": "^8.4.0"
+    "mocha": "^8.4.0",
+    "truffle": "^5.3.9"
   }
 }
