--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       - run: npm i
       - run: npm run lint
       - run: npm run compile
+      - run: npm run start_node
       - run: npm run test
 workflows:
   version: 2
