--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-node_modules/
-build/
-.envrc
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
 
