--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --timeout 10000 --exit --recursive",
-    "debug": "mocha debug --timeout 10000 --exit --recursive",
-    "compile": "truffle compile",
+    "start_node": "npx hardhat node &",
+    "test": "npx hardhat test",
+    "compile": "npx hardhat compile",
     "lint": "solhint 'contracts/*.sol'",
     "pretty": "npx prettier --write 'contracts/*.sol'"
   },
@@ -24,14 +24,13 @@
   },
   "homepage": "https://github.com/pawurb/SmartHold-contracts#readme",
   "devDependencies": {
-    "@openzeppelin/contracts": "^4.1.0",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@openzeppelin/contracts": "^4.8.0",
     "@openzeppelin/test-environment": "^0.1.9",
-    "@openzeppelin/test-helpers": "^0.5.11",
-    "chai": "^4.3.4",
-    "mocha": "^8.4.0",
-    "prettier": "^2.3.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.13",
-    "solhint": "^3.3.6",
-    "truffle": "^5.3.9"
+    "@openzeppelin/test-helpers": "^0.5.16",
+    "hardhat": "^2.12.4",
+    "prettier": "^2.8.1",
+    "prettier-plugin-solidity": "^1.1.1",
+    "solhint": "^3.3.7"
   }
 }
