--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,13 @@ version: 2
 jobs:
   test:
     docker:
-      - image: circleci/node:12.22.1
+      - image: cimg/node:16.19.0
     parallelism: 1
     steps:
       - checkout
       - run: npm i
       - run: npm run lint
       - run: npm run compile
-      - run: npm run start_node
       - run: npm run test
 workflows:
   version: 2
