--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "start_node": "npx hardhat node &",
-    "test": "npx hardhat test",
+    "test": "npx hardhat node & sleep 5 && npx hardhat test",
     "compile": "npx hardhat compile",
     "lint": "solhint 'contracts/*.sol'",
     "pretty": "npx prettier --write 'contracts/*.sol'"
