--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "npx hardhat node & sleep 5 && npx hardhat test",
     "compile": "npx hardhat compile",
     "lint": "solhint 'contracts/*.sol'",
-    "pretty": "npx prettier --write 'contracts/*.sol'"
+    "pretty": "npx prettier --write 'contracts/*.sol' && npx prettier --write 'test/'"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.16",
     "hardhat": "^2.12.4",
-    "prettier": "^2.8.1",
+    "prettier": "2.8.8",
     "prettier-plugin-solidity": "^1.1.1",
     "solhint": "^3.3.7"
   }
