--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hardhat": "^2.12.4",
     "prettier": "2.8.8",
     "prettier-plugin-solidity": "^1.1.1",
+    "prompt-sync": "^4.2.0",
     "solhint": "^3.3.7"
   }
 }
