--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   },
   "homepage": "https://github.com/pawurb/Locker#readme",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@openzeppelin/contracts": "^4.8.0",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@openzeppelin/contracts": "^4.9.3",
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.16",
-    "hardhat": "^2.12.4",
-    "prettier": "2.8.8",
-    "prettier-plugin-solidity": "^1.1.1",
+    "hardhat": "^2.17.3",
+    "prettier": "^2.8.8",
+    "prettier-plugin-solidity": "^1.1.3",
     "prompt-sync": "^4.2.0",
-    "solhint": "^3.3.7"
+    "solhint": "^3.6.2"
   }
 }
